second commit resolving the issue of 'overflow-x: hidden;'

--- a/css/style.css
+++ b/css/style.css
@@ -25,13 +25,16 @@
   -o-filter: blur(3px);
   -ms-filter: blur(3px);
 }
+html,
+body {
+  overflow-x: hidden;
+}
 body {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
   font-family: "PT Sans", sans-serif;
   background: #fff;
-  overflow-x: hidden;
 }
 /* section one */
 .section-1 {
